# nba_elt_dashboard

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  agents.md  config.yaml  pyproject.toml
.github/: labeler.yml
.github/scripts/: gcp_vm_update.sh  vm_deploy.sh  vm_restart.sh
.github/workflows/: auto_labeler.yml  ci.yaml  ci_cd.yaml  deploy.yml  gcp_vm_sync.yml  python-quality.yml  test.yml  vm_cron_restart.yml  vm_deploy.yml
docker/: Dockerfile  Dockerfile.test  docker-compose-local.yml  docker-compose-postgres.yml  docker-compose-test.yml  postgres_bootstrap.sql  test.sql
docs/: 2025-05-13-redesign-plan.md
src/: config.py  data.py  database.py  db_connection.py  recent_games_helpers.py  routes.py  server.py  shell.py  social_media_insights.py  social_media_plots.py  team_analysis_panels.py  utils.py  yaml_config.py
src/data_access/: __init__.py  cache.py  database.py  tables.py
src/data_cols/: future_schedule.py  game_types.py  injuries.py  injury_tracker.py  ml_predictions.py  player_stats.py  recent_games_players.py  recent_games_teams.py  reddit_comments.py  schedule.py  scorers.py  standings.py  tonights_schedule.py
src/pages/: about.py  overview.py  player_analysis.py  recent_games.py  schedule.py  social_media_analysis.py  team_analysis.py
src/table_columns/: __init__.py  future_schedule.py  injury_tracker.py  recent_games_players.py  recent_games_teams.py  reddit_recent_keywords.py  team_injuries.py  tonights_schedule.py  transactions.py
src/theme/: plotly.py
src/ui/: badges.py  cards.py  sections.py  tables.py
static/: styles.css  tab_shell.css
tests/: conftest.py  postgres_bootstrap.py
tests/e2e/: README.md  test_placeholder.py
tests/fixtures/: config_fixture.yaml  pbp_fixture.csv  team_ratings_fixture.csv
tests/integration/: conftest.py  get_data_test.py  pbp_plot_test.py  schedule_analysis_test.py  schedule_test.py  scoring_efficiency_test.py  social_media_reddit_analysis_plot_test.py  sql_connection_test.py  team_analysis_test.py  test_page_layouts_import.py  test_server_app.py
tests/unit/: data_test.py  generate_team_ratings_figure_test.py  load_yaml_with_env_test.py  pbp_transformer_test.py  test_badges.py  test_config_constants.py  test_css_tokens_smoke.py  test_db_connection.py  test_db_connection_get_data.py  test_overview_page_helpers.py  test_player_analysis_layout.py  test_postgres_bootstrap_path.py  test_recent_games_helpers.py  test_recent_games_page_helpers.py  test_schedule_page_helpers.py  test_sections.py  test_shell.py  test_social_media_insights.py  test_social_media_plots.py  test_team_analysis_panels.py  test_theme_plotly.py  test_ui_cards.py  test_ui_tables.py  test_utils_season_dropdown.py  test_yaml_config.py  test_yaml_nested_substitute.py
