[project]
name = "nba-elt-dashboard"
version = "1.1.0"
description = "NBA Dashboard Project"
authors = [{ name = "jyablonski9", email = "jyablonski9@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "dash>=2.14.0,<3",
    "psycopg2-binary>=2.9.9,<3",
    "sqlalchemy>=2.0.22,<3",
    "pandas>=2.1.1,<3",
    "pyyaml>=6.0.1,<7",
    "dash-bootstrap-components>=1.5.0,<2",
]

[dependency-groups]
test = [
    "pytest>=7.4.2,<8",
    "dash[testing]>=2.14.1,<3",
    "coveralls>=3.3.1,<4",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.12.0,<4",
]
dev = [
    "ipykernel>=6.25.2,<7",
    "black>=23.10.0,<24",
    "ruff>=0.1.1,<0.2",
]

[tool.uv]
package = false
default-groups = [
    "test",
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests"]
markers = [
    "wip: work in progress",
    "infrastructure: mocks for dummy data (sql db, http endpoint etc)",
]
addopts = "-v"
